# geometry

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt  geometry.c  geometry.h  point.c  point.h
example/: CMakeLists.txt  example_convh.c  example_gtests.c  example_intersect.c  initial_tet.csv  of_2.csv  overlapping_faces.csv  problematic.csv  problematic_2.csv  problematic_3.csv  problematic_4.csv  problematic_5.csv  problematic_6.csv  problematic_7.csv  problematic_8.csv  problematic_9.csv  review.asv  review.m
example/lobes/: L1.txt  L2.txt  L3.txt  L4.txt  L5.txt  S1.csv
include/: convh.h  geometry.h  gtests.h  points.h  trimesh.h
src/: ch_intersect.c  ch_intersect.h  ch_quickhull3D.c  ch_quickhull3D.h  convh.c  convh_quickhull3d.c  dump.c  geometry.c  gtests.c  hash.h  linalg.h  lists.h  new_hash.h  points.c  quickhull3d.c  quickhull3d.h  trimesh.c  trimesh_repair.c
